--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <div class="mb-3">
                     <label class="form-label">Số lượng câu hỏi</label>
                     <input id="subjectCountInput" type="number" class="form-control" min="1" max="50" value="10">
-                    <div class="form-text">Tối đa sẽ giới hạn theo số câu có sẵn.</div>
+                    <div id="countFormText" class="form-text">Tối đa sẽ giới hạn theo số câu có sẵn.</div>
                 </div>
             </div>
             <div class="khtn-modal-footer">
