--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@
         </div>
     </div>
 
-    <!-- Question data -->
-    <script src="js/questions-ly.js" defer></script>
+    <!-- Question data -->    <script src="js/questions-ly.js" defer></script>    <script src="js/questions-ly.js" defer></script>
     <script src="js/questions-hoa.js" defer></script>
     <script src="js/questions-sinh.js" defer></script>
     <script src="js/topics.js?cb=20260110" defer></script>
