--- a/index.html
+++ b/index.html
@@ -280,14 +280,14 @@
         </div>
     </div>
 
-    <!-- Question data -->    <script src="js/questions-ly.js" defer></script>    <script src="js/questions-ly.js" defer></script>
+    <!-- Question data -->    <script src="js/questions-ly.js" defer></script>
     <script src="js/questions-hoa.js" defer></script>
     <script src="js/questions-sinh.js" defer></script>
-    <script src="js/topics.js?cb=20260110" defer></script>
-    <script src="js/news-tips.js?cb=20260110" defer></script>
-    <script src="js/chatbot.js?cb=20260110" defer></script>
-    <script src="js/main.js?cb=20260110" defer></script>
-    <script src="js/quiz.js?cb=20260110" defer></script>
-    <script src="js/full-exam.js?cb=20260110" defer></script>
+    <script src="js/topics.js?v=202601231234" defer></script>
+    <script src="js/news-tips.js?v=202601231234" defer></script>
+    <script src="js/chatbot.js?v=202601231234" defer></script>
+    <script src="js/main.js?v=202601231234" defer></script>
+    <script src="js/quiz.js?v=202601231234" defer></script>
+    <script src="js/full-exam.js?v=202601231234" defer></script>
 </body>
 </html>
