--- a/pages/ly-thuyet.html
+++ b/pages/ly-thuyet.html
@@ -19,12 +19,28 @@
         .card-header-physics { background: linear-gradient(135deg,#007bff,#0056b3); }
         .card-header-chemistry { background: linear-gradient(135deg,#28a745,#19692c); }
         .card-header-biology { background: linear-gradient(135deg,#ffc107,#e0a800); }
+        .title-3d {
+            text-shadow: 
+                1px 1px 0 #ccc,
+                2px 2px 0 #c9c9c9,
+                3px 3px 0 #bbb,
+                4px 4px 0 #b9b9b9,
+                5px 5px 0 #aaa,
+                6px 6px 1px rgba(0,0,0,.1),
+                0 0 5px rgba(0,0,0,.1),
+                1px 1px 3px rgba(0,0,0,.3),
+                2px 2px 5px rgba(0,0,0,.2),
+                3px 3px 10px rgba(0,0,0,.25),
+                5px 5px 10px rgba(0,0,0,.2);
+            font-weight: bold;
+            color: #d31717;
+        }
     </style>
 </head>
 <body>
 
     <div class="header">
-        <h2 class="mb-0"><i class="fas fa-book-open me-3"></i>LÝ THUYẾT TRỌNG TÂM THI VÀO 10</h2>
+        <h2 class="mb-0 title-3d"><i class="fas fa-book-open me-3"></i>LÝ THUYẾT TRỌNG TÂM THI VÀO 10</h2>
     </div>
 
     <div class="main-content">
@@ -32,7 +48,7 @@
 
             <div class="row g-5">
                 <!-- Vật Lý -->
-                <div class="col-lg-4">
+                <div class="col-lg-4" id="physics">
                     <div class="card theory-card h-100 shadow-lg border-0">
                         <div class="card-header text-white text-center py-5 card-header-physics">
                             <img src="https://static.vecteezy.com/system/resources/thumbnails/069/018/564/small_2x/3d-atomic-structure-icon-in-purple-blue-glass-symbolizing-science-physics-innovation-and-technology-png.png" alt="Icon 3D Vật Lý - Atom kính xanh" class="subject-icon">
